# ai-realist-sycophantBench

./: .gitignore  README.md  clear_notebook_outputs.sh  install_git_hooks.sh  pyproject.toml
data/raw/: airealistposts.xlsx  posts.jsonl
notebooks/: analyze_existing_results.ipynb  evaluate_comments.ipynb  generate_comments.ipynb
prompts/evaluation/: incoming_v1.txt  outgoing_v1.txt
scripts/: git-pre-commit-hook.sh  process_excel_posts.py
