[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sycophant-benchmark"
version = "0.1.0"
description = "Two-frame sycophancy framing benchmark for LLM evaluation"
authors = [ {name = "Your Name", email = "you@example.com"} ]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha"
]
dependencies = [
  "jsonschema>=4.21.1",
  "pydantic>=2.4.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "tqdm>=4.66.0",
  "orjson>=3.9.0",
  "numpy>=1.26.0",
  "pandas>=2.1.0"
]

[project.optional-dependencies]
notebooks = ["jupyter", "matplotlib", "seaborn"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
